--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,7 @@
+@font-face{
+  font-family: "icons-turn-arrow";
+  src: url("../fonts/icons/turn-arrow.eot") format("embedded-opentype"), url("../fonts/icons/turn-arrow.woff") format("woff"), url("../fonts/icons/turn-arrow.ttf") format("truetype"), url("../fonts/icons/turn-arrow.svg") format("svg");
+}
 /* Base Application Styles */
 html, body {
     width: 100%;
@@ -25,11 +29,12 @@ html, body {
     position: relative;
 
     width: 100%;
-    height: 90%;
+    height: 100%;
     overflow: hidden;
 
     background-color: #ddd;
 
+    perspective: 1800px;
     @at-root{
       .img-figure{
         position: absolute;
@@ -40,6 +45,15 @@ html, body {
         padding: 40px;
         background-color: #fff;
         box-sizing: border-box;
+        cursor: pointer;
+
+        transform-origin: 0 50% 0;
+        transform-style: preserve-3d;
+        transition: transform .6s ease-in-out, left .6s ease-in-out, top .6s ease-in-out;
+
+        &.is-inverse {
+            transform: translate(320px)  rotateY(180deg);
+        }
       }
       figcaption{
         text-align: center;
@@ -48,6 +62,28 @@ html, body {
           margin:20px 0 0 0;
           color: #a7a0a2;
           font-size: 16px;
+        }
+        .img-back{
+          position: absolute;
+          left: 0;
+          top:0;
+
+          width: 100%;
+          height: 100%;
+          padding: 50px 40px;
+          overflow: auto;
+
+          color: #a7a0a2;
+          font-size: 22px;
+          line-height: 1.25;
+          text-align: left;
+
+          background-color: #fff;
+
+          box-sizing: border-box;
+          transform: rotateY(180deg) translateZ(1px);
+          backface-visibility: hidden;
+
         }
       }
     }
@@ -64,5 +100,45 @@ html, body {
     width: 100%;
 
     text-align: center;
+    @at-root {
+        .nav-item{
+            display: inline-block;
+            margin: 0 5px;
+            width: 30px;
+            height: 30px;
+
+            text-align: center;
+            vertical-align: middle;
+
+            cursor: pointer;
+            background-color: #aaa;
+            border-radius: 50%;
+
+            transform: scale(.5);
+            transition: transform .6s ease-in-out, background-color .6s;
+
+            &.is-center{
+              transform: scale(1);
+              background-color: #888;
+
+              &::after{
+                font-family:"icons-turn-arrow";
+                color: #fff;
+                line-height: 30px;
+                font-size: 80%;
+
+                content: "\e600";
+
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
+              }
+
+              &.is-inverse{
+                background-color: #555;
+                transform: rotateY(180deg);
+              }
+            }
+        }
+    }
 }
 /* controller -- end */
